--- a/public/assests/locales/ar/translation.json
+++ b/public/assests/locales/ar/translation.json
@@ -2,5 +2,6 @@
     "app_title": "عنوان",
     "language": "اللغة",
     "welcome_message": "اهلا بكم",
-    "days_since_release": "لقد مرت {{number_of_days}} أيام على إصدار هذا الفيديو"
+    "days_since_release": "لقد مرت {{number_of_days}} أيام على إصدار هذا الفيديو",
+    "text":"إنها حقيقة مثبتة منذ زمن طويل أن المحتوى المقروء للصفحة سوف يشتت انتباه القارئ عند النظر إلى تخطيطها. المغزى من استخدام لوريم إيبسوم هو أنه يحتوي على توزيع طبيعي إلى حد ما للأحرف، على عكس استخدام المحتوى هنا، المحتوى هنا، مما يجعله يبدو وكأنه لغة إنجليزية قابلة للقراءة."
   }
