--- a/public/assests/locales/en/translation.json
+++ b/public/assests/locales/en/translation.json
@@ -2,5 +2,6 @@
   "app_title": "Title",
   "language": "Language",
   "welcome_message": "Welcome",
-  "days_since_release": "it's been {{number_of_days}} days since this video was released"
+  "days_since_release": "it's been {{number_of_days}} days since this video was released",
+  "text":"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English."
 }
